--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -1,45 +1,75 @@
-.intro-container{
-    display:flex;
-    height:100vh;
+.intro-container {
+  display: flex;
+  height: 100vh;
 }
-.intro-left{
-    flex:1;
-    padding:1rem;
+.intro-left-wrapper {
+  padding: 2rem;
+  width:50%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+.intro-left {
+  flex: 1;
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
+}
+.intro-right {
+  flex: 1;
+  position:relative;
+}
+.intro-title {
+  font-weight: 400;
+}
+.intro-name {
+  font-size: 2.5rem;
+}
+.my-title {
+  height: 50px;
+  overflow: hidden;
+}
+.my-title-item {
+  height: 50px;
+  font-size: 1.7rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+}
+.my-title-wrapper {
+  height: 100%;
+  animation: move 10s ease-in-out infinite alternate;
+}
+.my-desc,.my-title{
+    margin-top:2rem;
+}
+@keyframes move {
+  25% {
+    transform: translateY(-50px);
+  }
+  50% {
+    transform: translateY(-100px);
+  }
+
+  100% {
+    transform: translateY(-150px);
+  }
+}
+/* //my foto */
+
 .intro-right{
-    flex:1;
-}
-.intro-title{
-    font-weight: 400;
-}
-.intro-name{
-    font-size: 2.5rem;
-}
-.my-title{
-    height:50px;
-    overflow: hidden;
-}
-.my-title-item{
-    height:50px; 
-    font-size: 1.7rem;
-    font-weight: bold;
-    display:flex;
-    align-items: center;
-}
-.my-title-wrapper{
+    background-color: bisque;
+    width:100%;
     height:100%;
-    animation: move 10s ease-in-out infinite alternate;
+    object-fit: cover;
 }
-@keyframes move{
-    25%{
-        transform: translateY(-50px);
-    }
-    50%{
-        transform: translateY(-100px);
-    }
-   
-    100%{
-        transform: translateY(-150px);
-    }
-    
-}
+/* .i-bg{
+    clip-path: polygon(100% 0%, 100% 51%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+    width:100%;
+    height:100%;
+    position:absolute;
+    top:0;
+    right:0;
+} */
