foto added to home page

--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -1,5 +1,6 @@
 .intro-container {
-  display: flex;
+  display: flex;justify-content: center;
+  align-items: center;
   height: 100vh;
 }
 .intro-left-wrapper {
@@ -18,7 +19,9 @@
   align-items: center;
 }
 .intro-right {
-  flex: 1;
+  flex: 1;display:flex;
+  justify-content: center;
+  align-items: center;
   position:relative;
 }
 .intro-title {
@@ -60,16 +63,26 @@
 /* //my foto */
 
 .intro-right{
-    background-color: bisque;
+   
     width:100%;
     height:100%;
     object-fit: cover;
 }
-/* .i-bg{
-    clip-path: polygon(100% 0%, 100% 51%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+ .i-bg{
+  background-color: bisque;
+  clip-path: polygon(100% 0%, 100% 52%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
     width:100%;
     height:100%;
     position:absolute;
     top:0;
     right:0;
-} */
+    z-index: -1;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+} 
+.i-bg img{
+ 
+
+
+}
