--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -81,8 +81,10 @@
     justify-content: center;
     align-items: center;
 } 
-.i-bg img{
+svg{
+   width:10rem;
+  height:3rem;
+  position:absolute;
+  bottom:3rem;
  
-
-
 }
