about me page styled

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -5,6 +5,7 @@
 }
 .about-left,
 .about-right {
+   
   flex: 1;
 
   display: flex;
@@ -12,9 +13,20 @@
   justify-content: center;
   align-items: center;
 }
+.about-right {
+    height:60%;
+   
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.about-right h1{
+font-size: 3rem;
+}
 .desc {
     font-size: 1.4rem;
-    line-height: 3rem;
+    line-height: 4rem;
+    margin-left:10px;
 }
 .about-left img {
   width: 80%;
