--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,4 +1,4 @@
-.project-header{
+/* .project-header{
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -15,7 +15,7 @@
     font-size: 1.5rem;
 }
 
-/* card styling */
+
 .projects-list{
    width:100%;
     border:2px solid red;
@@ -45,3 +45,4 @@ background-color: white;
 border-radius: 50%;
 margin-left:1rem;
 }
+ */
