--- a/src/components/ProjectList/ProjectList.css
+++ b/src/components/ProjectList/ProjectList.css
@@ -1,28 +1,25 @@
- .project-header{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+.project-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
-.project-text{
-    margin-left:4rem;
+.project-text {
+  margin-left: 4rem;
 }
-.project-text h1{
-    font-size: 2.5rem;
-    margin-bottom: 2rem;
+.project-text h1 {
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
 }
-.project-text p{
-    font-size: 1.5rem;
-}
-
-
-.projects-list{
-   width:100%;
-    border:2px solid red;
-    display:flex;
-    flex-wrap:wrap;
-    flex-direction: column;
-    justify-content: space-between;
+.project-text p {
+  font-size: 1.5rem;
 }
 
- 
+.projects-list {
+  width: 100%;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 2rem;
+}
