--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,12 +1,20 @@
 .contact{
     height:100vh;
 }
+.contact-title h1{
+    font-size: 2.5rem;
+    text-align: center;
+}
 .contact-wrapper{
     padding:3rem;
     display:flex;    
 }
 .contact-left{
     flex:1;
+}
+.contact-info h2{
+    font-size: 2rem;
+    font-weight: bolder;
 }
 .contact-right{
     flex:1;
@@ -29,4 +37,35 @@
     width:3rem;
     height:3rem;
     margin-right:1.2rem;
+}
+/* right-side */
+.contact-right{
+
+    height:100vh;
+}
+.contact-user-text{
+    font-size: 2rem;
+}
+form{
+    height:60%;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    
+  
+}
+.contact-right input{
+    width:50%;
+    height:7vh;
+    font-size:1.2rem;
+}
+textarea{
+    font-size:1.2rem;
+}
+.contact-right button{
+    width:10rem;
+    height:2.2rem;
+    font-size:1.2rem;
+    border-radius: 25px;
+    border:none;
 }
