--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -1,3 +1,16 @@
+/* //navbar */
+.intro-navbar{
+  background-color: grey;
+  display:flex;
+ justify-content: space-evenly;
+ align-items: center;
+ height:10vh;
+}
+.intro-navbar li{
+  list-style: none;
+font-size: 1.5rem;
+font-weight: 600;
+}
 .intro-container {
   display: flex;justify-content: center;
   align-items: center;
@@ -46,6 +59,7 @@ margin-left:15rem;
   height: 100%;
   animation: move 10s ease-in-out infinite alternate;
   width:30rem;
+  color:orange;
 }
 .my-desc,.my-title{
     margin-top:2rem;
@@ -77,7 +91,7 @@ margin-left:15rem;
     object-fit: cover;
 }
  .i-bg{
-  background-color: bisque;
+  background-color: orange;
   clip-path: polygon(100% 0%, 100% 52%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
     width:100%;
     height:100%;
