--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -12,19 +12,22 @@ font-size: 1.5rem;
 font-weight: 600;
 }
 .intro-container {
+  
   display: flex;justify-content: center;
   align-items: center;
   height: 100vh;
 }
 .intro-left-wrapper {
+  background-color: #D3D3D3;
   padding: 2rem;
   width:50%;
-  height: 50%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .intro-left {
+  
   flex: 1;
   display: flex;
   flex-direction:column;
@@ -55,6 +58,7 @@ font-weight: 600;
   align-items: center;
 }
 .my-title-wrapper {
+  
 margin-left:15rem;
   height: 100%;
   animation: move 10s ease-in-out infinite alternate;
@@ -85,7 +89,7 @@ margin-left:15rem;
 /* //my foto */
 
 .intro-right{
-   
+
     width:100%;
     height:100%;
     object-fit: cover;
