--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -1,44 +1,51 @@
 /* //navbar */
-.intro-navbar{
+.intro-navbar {
   background-color: grey;
-  display:flex;
- justify-content: space-evenly;
- align-items: center;
- height:10vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 12vh;
 }
-.intro-navbar li{
+.intro-navbar img {
+  height: 12rem;
+  width: 15%;
+}
+a {
   list-style: none;
-font-size: 1.5rem;
-font-weight: 600;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: black;
+  cursor: pointer;
 }
 .intro-container {
-  
-  display: flex;justify-content: center;
+  display: flex;
+  justify-content: center;
   align-items: center;
   height: 100vh;
 }
 .intro-left-wrapper {
-  background-color: #D3D3D3;
+  background-color: #d3d3d3;
   padding: 2rem;
-  width:50%;
+  width: 50%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .intro-left {
-  
   flex: 1;
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 .intro-right {
-  flex: 1;display:flex;
+  flex: 1;
+  display: flex;
   justify-content: center;
   align-items: center;
-  position:relative;
+  position: relative;
 }
 .intro-title {
   font-weight: 400;
@@ -58,19 +65,18 @@ font-weight: 600;
   align-items: center;
 }
 .my-title-wrapper {
-  
-margin-left:15rem;
+  margin-left: 15rem;
   height: 100%;
   animation: move 10s ease-in-out infinite alternate;
-  width:30rem;
-  color:orange;
+  width: 30rem;
+  color: orange;
 }
-.my-desc,.my-title{
-    margin-top:2rem;
-    
+.my-desc,
+.my-title {
+  margin-top: 2rem;
 }
-.my-desc{
-  margin-left:3rem;
+.my-desc {
+  margin-left: 3rem;
   font-size: 1.5rem;
   line-height: 3rem;
 }
@@ -88,29 +94,27 @@ margin-left:15rem;
 }
 /* //my foto */
 
-.intro-right{
-
-    width:100%;
-    height:100%;
-    object-fit: cover;
+.intro-right {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
- .i-bg{
+.i-bg {
   background-color: orange;
   clip-path: polygon(100% 0%, 100% 52%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
-    width:100%;
-    height:100%;
-    position:absolute;
-    top:0;
-    right:0;
-    z-index: -1;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-} 
-svg{
-   width:10rem;
-  height:3rem;
-  position:absolute;
-  bottom:3rem;
- 
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+svg {
+  width: 10rem;
+  height: 3rem;
+  position: absolute;
+  bottom: 3rem;
 }
