contact page arrow linked

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,4 +1,5 @@
 .contact{
+    position:relative;
     height:100vh;
 }
 .contact-title h1{
@@ -71,4 +72,13 @@ textarea{
     font-size:1.2rem;
     border-radius: 25px;
     border:none;
+}
+.contact .arrow{
+    position:absolute;
+    bottom:1rem;
+    width: 20rem;
+    display: flex;
+    justify-content: space-evenly;
+     left: 40rem;
+  
 }
