--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -8,10 +8,12 @@
 }
 .contact-wrapper{
     padding:3rem;
-    display:flex;    
+    display:flex; 
+     text-align: center;   
 }
 .contact-left{
     flex:1;
+   
 }
 .contact-info h2{
     font-size: 2rem;
@@ -26,12 +28,14 @@
     display:flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: center;
 }
 .contact-info-icon{
   
     display:flex;
     align-items: center;
    font-size: 1.5rem;
+   margin-left:3rem;
 
 }
 .contact-info-icon img{
@@ -46,6 +50,8 @@
 }
 .contact-user-text{
     font-size: 2rem;
+ 
+    font-weight: bolder;
     margin-bottom:2rem;
 }
 form{
