--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,4 +1,5 @@
 .skills-container{
+    
     width:100%;
     height:100%;
     margin:2rem;
@@ -22,6 +23,11 @@ padding:3rem;
     height:10rem;
 }
 .skills-container .arrow{
-    position:absolute;
-    bottom:1rem;
+
+width: 20rem;
+  display: flex;
+  justify-content: space-evenly;
+  position: absolute;
+  bottom: 1rem;
+  left: 40rem;
 }
