--- a/src/components/Skills/Progressbar.css
+++ b/src/components/Skills/Progressbar.css
@@ -5,3 +5,9 @@
 .html{
     display:flex;
 }
+.technical-progressbar{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
