--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -9,7 +9,7 @@
 .intro-navbar span {
   width: 10%;
   height:70px;
-  border:2px solid red;
+ 
 }
 .intro-navbar span img{
   width:100%;
@@ -41,6 +41,7 @@ a {
   align-items: center;
 }
 .intro-left {
+  width:100%;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -49,6 +50,8 @@ a {
  
 }
 .intro-right {
+  /* width:100%;
+  padding:2%; */
   flex: 1;
   display: flex;
   justify-content: center;
@@ -73,7 +76,7 @@ a {
   align-items: center;
 }
 .my-title-wrapper {
-  margin-left: 15rem;
+  margin:0 30%;
   height: 100%;
   animation: move 10s ease-in-out infinite alternate;
   width: 30rem;
@@ -111,14 +114,17 @@ a {
   background-color: orange;
   clip-path: polygon(100% 0%, 100% 52%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
   width: 100%;
-  height: 100%;
+ 
   
   z-index: -1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
+.i-bg img{
+  width:100%;
+  height:100%;
+}
 .right-arrow,.left-arrow {
 
   width:4rem;
@@ -128,40 +134,17 @@ a {
 }
 
 /* responsive mobile */
-@media only screen and (max-width:450px){
+@media only screen and (max-width:700px){
    .intro-navbar a{
-    font-size: 0.75rem;
-  }
-  .intro-navbar img {
-    height: 8rem;
-    width: 25%;
-  }
-  .intro-name {
-    margin-top:1rem;
-    font-size: 1.2rem;
-    margin-left:1.2em;
-  }
-  .my-title-item {
- 
-    font-size: 1.2rem;
-    font-weight: bold;
-  margin-left:3rem;
-  }
-  .my-desc {
-    width:25%;
-    margin-left: 1.2rem;
+       font-size: 1rem;
+   }
+   .intro-title{
     font-size: 1rem;
-    line-height:1.5rem;
-  }
-  .i-bg img{
-
-    width:90vw;
-    height:30vh;
-    overflow: hidden;
-  }
-  .right-arrow,.left-arrow {
-
-    width:2.2rem;
-    
-  }
+   }
+   .intro-name{
+    font-size: 1.5rem;
+   }
+   .my-title-item{
+    font-size: 1rem;
+   }
 }
