--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,6 +1,6 @@
 .about-container {
   display: flex;
-  height: 100vh;
+
   align-items: center;
   position: relative;
 }
@@ -15,18 +15,18 @@
 }
 .about-right {
   height: 60%;
-
+width:100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .about-right h1 {
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 .desc {
-  font-size: 1.4rem;
-  line-height: 4rem;
-  margin-left: 10px;
+  font-size: 1.5rem;
+  line-height: 3rem;
+  
 }
 .about-left img {
   width: 80%;
@@ -35,8 +35,6 @@
   width: 20rem;
   display: flex;
   justify-content: space-evenly;
-  position: absolute;
-  bottom: 1rem;
-  left: 40rem;
+ 
 }
 /* responsive for mobile */
