--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,37 +1,41 @@
-.skills-container{
-    
-    width:100%;
-    height:100%;
-    margin:2rem;
+.skills-container {
+  width: 100%;
+  padding: 2%;
 }
-.skills-heading{
-    font-size:3rem;
-    text-align: center;
+.skills-heading {
+  font-size: 2.5rem;
+  text-align: center;
 }
-.skills-desc{
-    font-size:2rem;
+.skills-desc {
+  font-size: 1.5rem;
 }
-.skills-icons{
-padding:3rem;
-    display:flex;
-    justify-content: space-evenly;
-    align-items: center; 
-
+.skills-icons {
+  padding: 3%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
-.skills-icons img{
-    width:10rem;
-    height:10rem;
+.skills-icons img {
+  width: 10%;
+  height: 10%;
 }
-.skills-container .arrow{
-
-width: 20rem;
+.skills-container .arrow {
+  width: 20rem;
   display: flex;
   justify-content: space-evenly;
   position: absolute;
   bottom: 1rem;
   left: 40rem;
 }
-.technical-progressbar{
-  
-    width:90%;
+.technical-progressbar {
+  width: 100%;
+ 
+  display: flex;
+  flex-direction: column;
+
+border:2px solid blue;
+}
+.html{
+    border:2px solid red;
+ 
 }
