styling to make responsive

--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -4,18 +4,15 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-
 }
 .intro-navbar span {
   width: 10%;
-  height:70px;
- 
+  height: 70px;
 }
-.intro-navbar span img{
-  width:100%;
-  height:100%;
+.intro-navbar span img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
- 
 }
 a {
   list-style: none;
@@ -24,44 +21,33 @@ a {
   font-weight: 600;
   color: black;
   cursor: pointer;
+  height: 90%;
 }
 .intro-container {
   display: flex;
   justify-content: center;
-  align-items: center;
- 
 }
 .intro-left-wrapper {
-
   padding: 2rem;
   width: 50%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 .intro-left {
-  width:100%;
+  width: 100%;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
- 
 }
 .intro-right {
-  /* width:100%;
-  padding:2%; */
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
- }
+  width: 100%;
+}
 .intro-title {
   font-weight: 400;
 }
 .intro-name {
+  text-align: center;
   font-size: 2.5rem;
 }
 .my-title {
@@ -69,17 +55,12 @@ a {
   overflow: hidden;
 }
 .my-title-item {
-  height: 50px;
   font-size: 2rem;
   font-weight: bold;
-  display: flex;
-  align-items: center;
 }
 .my-title-wrapper {
-  margin:0 30%;
-  height: 100%;
   animation: move 10s ease-in-out infinite alternate;
-  width: 30rem;
+  width: 100%;
   color: orange;
 }
 .my-desc,
@@ -87,7 +68,6 @@ a {
   margin-top: 2rem;
 }
 .my-desc {
-  margin-left: 3rem;
   font-size: 1.5rem;
   line-height: 3rem;
 }
@@ -106,49 +86,55 @@ a {
 /* //my foto */
 
 .intro-right {
+  width: 50%;
+  /* height: 50vh; */
+  padding: 25% 0;
+  /*   object-fit: cover; */
+  background-image: url(../../images/foto1.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
+  background-color: orange;
+  border: 1px red solid;
+}
+/*  clip-path: polygon(100% 0%, 100% 52%, 100% 100%, 25% 100%, 0% 50%, 25% 0%); */
+/* .i-bg {
+  background-color: orange;
   width: 100%;
   height: 100%;
-  object-fit: cover;
-}
-.i-bg {
-  background-color: orange;
-  clip-path: polygon(100% 0%, 100% 52%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
-  width: 100%;
- 
-  
-  z-index: -1;
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.i-bg img{
-  width:100%;
-  height:100%;
-}
-.right-arrow,.left-arrow {
-
-  width:3rem;
-  margin-top:2rem;
-   
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  justify-content: flex-end;
+  z-index: -1;
+} */
+/* .i-bg img {
+  width: 60%;
+  object-fit: contain;
+} */
+.right-arrow,
+.left-arrow {
+  width: 40%;
+  padding: 2%;
+  border: 2px red solid;
+  margin-top: 15%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 /* responsive mobile */
-@media only screen and (max-width:700px){
-   .intro-navbar a{
-       font-size: 1rem;
-   }
-   .intro-title{
+@media only screen and (max-width: 700px) {
+  .intro-navbar a {
     font-size: 1rem;
-   }
-   .intro-name{
+  }
+  .intro-title {
+    font-size: 1rem;
+  }
+  .intro-name {
     font-size: 1.5rem;
-   }
-   .my-title-item{
+  }
+  .my-title-item {
     font-size: 1rem;
-   }
-   .my-desc{
-    width:100%;
+  }
+  .my-desc {
+    width: 100%;
     font-size: 1rem;
-   }
+  }
 }
