--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,23 +1,13 @@
 .about-container {
   display: flex;
-
-  align-items: center;
-  position: relative;
 }
-.about-left,
+.about-left {
+  width: 50%;
+}
 .about-right {
-  flex: 1;
-
+  width: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.about-right {
-  height: 60%;
-width:100%;
-  display: flex;
-  justify-content: center;
   align-items: center;
 }
 .about-right h1 {
@@ -26,15 +16,13 @@ width:100%;
 .desc {
   font-size: 1.5rem;
   line-height: 3rem;
-  
 }
 .about-left img {
-  width: 80%;
+  width: 100%;
 }
 .about-container .arrow {
-  width: 20rem;
+  width: 30%;
   display: flex;
   justify-content: space-evenly;
- 
 }
 /* responsive for mobile */
