--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,32 +1,35 @@
 .projects {
   width: 30%;
-
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
   margin: 20px 10px;
   border: 2px solid grey;
   border-radius: 20px;
- padding:2%;
+  padding: 2%;
 }
-a{
+/* a{
   position:relative;
 display:flex;
 height:90%;
-  }
+  } */
 
 .images {
   width: 100%;
   height: 100%;
+  object-fit: cover;
   transition: all 2s ease;
 }
 .projects:hover .images {
   transform: translateY(-5%);
 }
-.projects p{
-  font-size: 2rem;
+.projects p {
+  font-size: 1rem;
   font-weight: 600;
 }
-@media only screen and (max-width:650px){
+@media only screen and (max-width: 650px) {
   .projects {
     width: 100%;
-   
   }
 }
