--- a/src/components/ProjectList/ProjectList.css
+++ b/src/components/ProjectList/ProjectList.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  position:relative;
+  position: relative;
 }
 
 .project-text h1 {
@@ -22,9 +22,8 @@
   padding: 2rem;
 }
 
-.project-header  .arrow {
-  width: 20rem;
+.project-header .arrow {
+  width: 30%;
   display: flex;
   justify-content: space-evenly;
- 
 }
