responsive styling almost done

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -9,11 +9,6 @@
   border-radius: 20px;
   padding: 2%;
 }
-/* a{
-  position:relative;
-display:flex;
-height:90%;
-  } */
 
 .images {
   width: 100%;
@@ -27,6 +22,7 @@ height:90%;
 .projects p {
   font-size: 1rem;
   font-weight: 600;
+  margin-top: 5%;
 }
 @media only screen and (max-width: 650px) {
   .projects {
