--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -29,13 +29,25 @@
 }
 .technical-progressbar {
   width: 100%;
- 
+
   display: flex;
   flex-direction: column;
 
-border:2px solid blue;
 }
-.html{
-    border:2px solid red;
+.html {
  
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin:0 auto;
 }
+.progress-skill {
+  margin-bottom: 1%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.progress-skill span {
+  font-weight: 700;
+} 
