--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -87,14 +87,15 @@ a {
 
 .intro-right {
   width: 50%;
-  /* height: 50vh; */
-  padding: 25% 0;
-  /*   object-fit: cover; */
-  background-image: url(../../images/foto2.png);
-  background-size: cover;
+
+ /*  padding: 25% 0; */
+ padding: 25% 0;
+  background-image: url(../../images/foto3.png);
+  background-size: /* cover */60%;
   background-repeat: no-repeat;
-  background-position: right;
+  background-position: /* right */center center;
   background-color: orange;
+
  }
 /*  clip-path: polygon(100% 0%, 100% 52%, 100% 100%, 25% 100%, 0% 50%, 25% 0%); */
 
@@ -107,8 +108,6 @@ a {
 }
 .intro-right .right-arrow{
   margin-top:30%;
-
-border:2px solid red;
 }
 /* responsive mobile */
 @media only screen and (max-width: 700px) {
@@ -127,5 +126,13 @@ border:2px solid red;
   .my-desc {
     width: 100%;
     font-size: 1rem;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .intro-navbar a {
+    font-size: 0.8rem;
+  }
+  .intro-right{
+    padding:50%;
   }
 }
