--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -11,11 +11,12 @@
   align-items: center;
 }
 .about-right h1 {
-  font-size: 2.5rem;
+  margin-top:5%;
+  font-size: 2rem;
 }
 .desc {
   margin-top:5%;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   line-height: 3rem;
 }
 .about-left img {
