--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -7,18 +7,19 @@
   text-align: center;
 }
 .contact-wrapper {
+
   padding: 0.5%;
   display: flex;
   text-align: center;
 }
 .contact-left {
   flex: 1;
-}
-.contact-info{
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+}
+.contact-info{
+ margin-top:3%;
 }
 .contact-info h2 {
   font-size: 1.5rem;
